[package]
name = "cgranges"
version = "0.1.0"
authors = ["Till Hartmann <till.hartmann@udo.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = { path = "../rust-bio-tedil" }
itertools = "0.9"
serde = "1.0"
serde_derive = "1.0"
csv = "1.1"
structopt = "0.3"